some refactoring & more tests